# scorbit_sdk

./: .gersemirc  .gitattributes  .gitignore  AGENTS.md  AGENT_CONVENTIONS.md  AUTOSSH_VERSION  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Makefile  OPENSSH_VERSION  README.md  VERSION
.beads/: issues.jsonl
all/: CMakeLists.txt
cmake/: ArchDetect.cmake  boost.cmake  download_file.cmake  encrypt.cmake  guards.cmake  lib_boost.cmake  lib_centrifugo-cpp  lib_centrifugo-cpp.cmake  lib_concurrentqueue.cmake  lib_cpr.cmake  lib_date.cmake  lib_doctest.cmake  lib_fmt.cmake  lib_nlohmann_json.cmake  package_project.cmake  patch.cmake  scorbit_sdk_package_project.cmake  tools.cmake
cpp/: CMakeLists.txt
cpp/include/scorbit_sdk/: common_types_c.h  log_c.h  net.h  scorbit_sdk.h
cpp/src/: game_data.h  game_state_impl.h  log.cpp  logger.cpp  logger.h  net.cpp
cpp/tests/test_detail/: CMakeLists.txt
cpp/tests/test_detail/source/: test_game_state.cpp
cpp/tests/test_interface/: CMakeLists.txt
cpp/tests/test_interface_c/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile
documentation/: CMakeLists.txt  Doxyfile  conf.py
encrypt_tool/: CMakeLists.txt
encrypt_tool/source/: main.cpp
examples/: CMakeLists.txt
examples/c_example/: CMakeLists.txt  Makefile  c_api_bench.c  c_api_bench.h  main.c
examples/common_signer/: scorbit_crypt.h
examples/cpp_example/: CMakeLists.txt  main.cpp
examples/cpp_simple/: CMakeLists.txt  main.cpp
examples/python27_example/: main.py
examples/python_example/: main.py
examples/signer_function/: scorbit_crypt.c
libs/centrifugo-cpp/: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  devenv.nix  docker-compose.yml
libs/centrifugo-cpp/cmake/: lib_boost.cmake
libs/centrifugo-cpp/examples/: full.cpp  staging.cpp
libs/centrifugo-cpp/include/: centrifugo.h
libs/centrifugo-cpp/include/centrifugo/: common.h  error.h  procotol.h  subscription.h
libs/centrifugo-cpp/services/centrifugo/: config.yaml
libs/centrifugo-cpp/services/jwt-generator/: Dockerfile  app.py  requirements.txt
libs/centrifugo-cpp/src/: centrifugo.cpp  error.cpp  protocol_all.cpp  protocol_all.h  subscription.cpp  subscription_impl.cpp  subscription_impl.h  transport.cpp  transport.h
libs/cryptoauth_shared/: CMakeLists.txt  scorbit_pkcs11_discover.c  scorbit_pkcs11_discover.h
libs/diagnostics/: CMakeLists.txt  sources.cmake
libs/diagnostics/examples/wifi_status/: main.cpp
libs/diagnostics/include/diagnostics/: lan_ip.h
libs/diagnostics/include/diagnostics/wifi/: network_monitor.h  wifi_diagnostics.h
libs/diagnostics/source/: lan_ip.cpp
libs/diagnostics/source/wifi/: network_monitor.cpp  wifi_diagnostics.cpp  wpa_supplicant_dbus.cpp
libs/logger/: CMakeLists.txt  sources.cmake
libs/logger/detail/: cut_long_string.h
libs/logger/include/logger/: log_level.h  logger.h
libs/logger/logger_callback/: logger_callback.cpp
libs/logger/logger_callback/logger/: logger_callback.h
libs/logger/logger_spdlog/: logger_spdlog.cpp
libs/logger/logger_spdlog/logger/: logger_spdlog.h
libs/logger/source/: logger.cpp
libs/nfc/: CMakeLists.txt  sources.cmake
libs/nfc/include/nfc/: Cable.h  CdcTpm.h  Discovery.h  ListUsbDevices.h  Probe.h  Util.h  probes_manager.h
libs/nfc/source/: list_usb_devices.cpp  list_usb_devices.h  probes_manager.cpp
libs/tpm/: CMakeLists.txt  cryptoauthlib-build-fixes.patch  cryptoauthlib-pkcs11-cdc-auto-discovery.patch  cryptoauthlib-pkcs11-multiple-config-files.patch  cryptoauthlib-pkcs11-uart-cdc-interface.patch  lib_cryptoauth.cmake  sources.cmake
libs/tpm/include/tpm/: crypto_helpers.h  hardwaretpm.h  itpm.h  softwaretpm.h  tpm.h
libs/tpm/source/: crypto_constants.h  crypto_helpers.cpp  crypto_helpers.h  crypto_utils.cpp  crypto_utils.h  fake_atca_hal.c  hardwaretpm.cpp  softwaretpm.cpp  tpm.cpp
libs/tpm/test/: CMakeLists.txt  sources.cmake
libs/tpm/test/source/: test_crypto_helpers.cpp  test_crypto_utils.cpp  test_probetpm.cpp  test_softwaretpm.cpp
libs/utils/: CMakeLists.txt  sources.cmake
libs/utils/include/utils/: bytearray.h  commandrunner.h  flags.h  fs_read_write.h  remount.h  toupper.h  utils.h
libs/utils/source/: bytearray.cpp  commandrunner.cpp  fs_read_write.cpp  remount.cpp  toupper.cpp  utils.cpp
libs/utils/test/: CMakeLists.txt  sources.cmake
libs/utils/test/source/: test_utils.cpp
python/: LICENSE  (+2 more)
test/: CMakeLists.txt
test/source/: greeter.cpp  test1.cpp  test_game_state.cpp  test_game_state_c.cpp  test_logger.cpp  test_net.cpp
test/test_detail/: CMakeLists.txt
test/test_detail/source/: test_game_state.cpp  test_modes.cpp  test_net.cpp  test_net_util.cpp  test_player_state.cpp  trompeloeil_printer.h
test/test_interface/: CMakeLists.txt
test/test_interface/source/: test_game_state.cpp
tests/: CMakeLists.txt
tests/test_detail/: CMakeLists.txt
tests/test_detail/source/: platform_id.h  test_archiver.cpp  test_date_time_parser.cpp  test_decrypt.cpp  test_event_manager.cpp  test_event_queue.cpp  test_game_state.cpp  test_jwt_parser.cpp  test_lan_ip.cpp  test_leaderboard.cpp  test_logger.cpp  test_lru_cache.cpp  test_mac_address.cpp  test_machine_fingerprint.cpp  test_modes.cpp  test_net.cpp  test_net_util.cpp  test_nfc_tpm_key_resolver.cpp  test_player_profiles_manager.cpp  test_player_state.cpp  test_safe_multipart.cpp  test_soft_key_resolver.cpp  test_updater.cpp  test_wifi_diagnostics.cpp  test_worker.cpp  trompeloeil_printer.h
tests/test_detail/source/scorbit_sdk/: version.h
tests/test_interface/: CMakeLists.txt
tests/test_interface/source/: test_device_info.cpp  test_game_state_c.cpp  test_version.cpp
tests/test_interface_c/: CMakeLists.txt
tests/test_interface_c/source/: test_log_c.c
tests/test_python/: test_leaderboard_types.py  test_scrobit.py
wrappers/python/: CMakeLists.txt  README.md  pyproject.toml
wrappers/python/src/: game_state_py.cpp
wrappers/python/src/scorbit/: __init__.py  _bindings.py  _enums.py  _install_hints.py  _loader.py  _types.py  _version.py  config.py  event.py  game_state.py
(+248 files in other folders)
